--- a/anni-albers/index.html
+++ b/anni-albers/index.html
@@ -45,7 +45,7 @@
 
         </div>
         <div class="img" style="position: absolute; top: 80px; right: 46%">
-          <img src="/assets/img/Anni Albers/des Western Regional Archives, Staatsarchiv von North Carolina.jpg" width="200px" mix-blend-mode="multiply" alt="Beispielbild" class="hidden-image"></div>
+          <img src="/assets/img/Anni Albers/des Western Regional Archives, Staatsarchiv von North Carolina.jpg" width="200px" alt="Beispielbild" class="hidden-image"></div>
         <div class="imgcredit"><div class="hidden-child">credit: Public domain,
         <br>via Wikimedia Commons</div>
         </div>
@@ -62,16 +62,13 @@
         <a href="#img2"><img src="/assets/img/Anni Albers/creative commons/Anni_Albers,_Tapestry,_1948._Handwoven_linen_and.jpg" alt="Bild 2"></a>
         </div>
         <div class="img-container">
-        <a href="#img3"><img src="/assets/img/Anni Albers/des Western Regional Archives, Staatsarchiv von North Carolina.jpg" alt="Bild 2"></a>
+        <a href="#img3"><img src="/assets/img/Anni Albers/creative commons/Anni_Albers_(1899–1994),_Design_for_a_Silk_Tapestry,_1926.jpg" alt="Bild 2"></a>
         </div>
         <div class="img-container">
-        <a href="#img4"><img src="/assets/img/CharlottePerriand/Charlotte auf LC4, Archiv Charlotte Perriand:Elisabeth Sandmann.webp" alt="Bild 2"></a>
+        <a href="#img4"><img src="/assets/img/Anni Albers/creative commons/Anni_Albers_(1899–1994),_Design_for_a_Rug,_1927.jpg" alt="Bild 2"></a>
         </div>
         <div class="img-container">
-        <a href="#img5"><img src="/assets/img/Anni Albers/creative commons/Anni_Albers_(1899–1994),_Design_for_a_Rug,_1927.jpg" alt="Bild 2"></a>
-        </div>
-        <div class="img-container">
-        <a href="#img6"><img src="/assets/img/Anni Albers/creative commons/Anni_Albers_(1899–1994),_Design_for_a_Jacquard_Weaving,_1926.jpg" alt="Bild 2"></a>
+        <a href="#img5"><img src="/assets/img/Anni Albers/creative commons/Anni_Albers_(1899–1994),_Design_for_a_Jacquard_Weaving,_1926.jpg" alt="Bild 2"></a>
         </div>
 <div id="img1" class="modal">
         <div class="button"><a href="#">X</a></div> 
@@ -86,23 +83,32 @@
         <h4> fusion von xyz </h4>
         </div>
 <div id="img3" class="modal">
-        <div class="button"><a href="#">X</a></div>     
-        <img src="/assets/img/CharlottePerriand/ refuge tonneau by pierre jeanneret and charlotte perriand, architectes, 1938.png" alt="Bild 1">
-        <div class="grid-box-hl"><h6>„Refuge Tonneau“</h6><div class="grid-box-p"><h4>ein alpines Biwak entworfen in 1938 von Charlotte Perriand und Pierre Jeanneret, gebaut in 2010 vom italienische Label Cassina. Sie erwarben die Rechte an Perriands Nachlass, wodurch es ihnen erlaubt war getreu den Notizen und Skizzen zu bauen. 
-        Gedacht für den Einsatz im gesamten Alpenraum und das Leben unter extremen Bedingungen, finden sich hier 8 Plätz zum Schlafen, Sitzen und Leben. Die Besonderheit: In aller Reduziertheit sind alle nötigen Einrichtungsgegenständige sind vorhanden – Perriand sah stets eine besondere Herausforderung darin, begrenzten Wohnraum funktionell einzurichten.</h4></div>
-    </div>
+        <div class="button"><a href="#">X</a></div> 
+        <img src="/assets/img/Anni Albers/creative commons/Anni_Albers_(1899–1994),_Design_for_a_Silk_Tapestry,_1926.jpg" alt="Bild 1">
+       <div class="grid-box-hl"><h6>„Six Prayers“</h6><div class="grid-box-p"><h4><u>Anni Albers, 1966–67</u> <br>
+       Das Kunstwerk aus sechs Stoffbahnen soll an die sechs Millionen ermordeter Juden während des Zweiten Weltkrieges erinnen. <br><br>
+       "Auf internationalen Ausstellungstourneen in Europa und den USA hat das Kunstwerk, dessen schmale Stoffbahnen an jüdische Gebetsschals erinnern, große Aufmerksamkeit erhalten. „Six Prayers“ ist „ein wichtiges Werk über den Holocaust, das die würdige Präsenz eines religiösen Rituals aufweist“, urteilte ein amerikanischer Kunstkritiker.</h4></div></div>
+</div>
+<div id="img4" class="modal">
+        <div class="button"><a href="#">X</a></div> 
+        <img src="/assets/img/Anni Albers/creative commons/Anni_Albers_(1899–1994),_Design_for_a_Rug,_1927.jpg" alt="Bild 1">
+       <div class="grid-box-hl"><h6>„Six Prayers“</h6><div class="grid-box-p"><h4><u>Anni Albers, 1966–67</u> <br>
+       Das Kunstwerk aus sechs Stoffbahnen soll an die sechs Millionen ermordeter Juden während des Zweiten Weltkrieges erinnen. <br><br>
+       "Auf internationalen Ausstellungstourneen in Europa und den USA hat das Kunstwerk, dessen schmale Stoffbahnen an jüdische Gebetsschals erinnern, große Aufmerksamkeit erhalten. „Six Prayers“ ist „ein wichtiges Werk über den Holocaust, das die würdige Präsenz eines religiösen Rituals aufweist“, urteilte ein amerikanischer Kunstkritiker.</h4></div></div>
+</div>
 <div id="img5" class="modal">
         <div class="button"><a href="#">X</a></div>     
-        <img src="/assets/img/Anni Albers/creative commons/Anni_Albers_(1899–1994),_Design_for_a_Rug,_1927.jpg" alt="Bild 1">
+        <img src="/assets/img/Anni Albers/creative commons/Anni_Albers_(1899–1994),_Design_for_a_Jacquard_Weaving,_1926.jpg" alt="Bild 1">
         <div class="grid-box-hl"><h6>„Refuge Tonneau“</h6><div class="grid-box-p"><h4>ein alpines Biwak entworfen in 1938 von Charlotte Perriand und Pierre Jeanneret, gebaut in 2010 vom italienische Label Cassina. Sie erwarben die Rechte an Perriands Nachlass, wodurch es ihnen erlaubt war getreu den Notizen und Skizzen zu bauen. 
         Gedacht für den Einsatz im gesamten Alpenraum und das Leben unter extremen Bedingungen, finden sich hier 8 Plätz zum Schlafen, Sitzen und Leben. Die Besonderheit: In aller Reduziertheit sind alle nötigen Einrichtungsgegenständige sind vorhanden – Perriand sah stets eine besondere Herausforderung darin, begrenzten Wohnraum funktionell einzurichten.</h4></div>
-    </div>    
+</div>    
 <div id="img6" class="modal">
         <div class="button"><a href="#">X</a></div>  
         <img src="/assets/img/Anni Albers/creative commons/Anni_Albers_(1899–1994),_Design_for_a_Jacquard_Weaving,_1926.jpg" alt="Bild 1">
         <h4> fusion von xyz </h4>
         </div>
 </div>                              
+</div>
 <p>„Das große Dilemma ihres Lebens hat Anni Albers selbst einmal auf den Punkt gebracht. ‚Wenn eine Arbeit mit Fäden entsteht, dann wird sie als Handwerk betrachtet; auf Papier wird sie als Kunst angesehen.‘“, so Hannah Pilarczyk 2018 im Spiegel. Denn „obwohl Gründungsdirektor Walter Gropius Gleichbehandlung als Maxime ausgegeben hatte, konnten nur die männlichen Studenten wählen, ob sie sich auf die Arbeit mit Holz, Metall, Ton, Papier oder Glas spezialisieren wollten. Frauen wurde die Textilwerkstatt gewissermaßen zugeteilt.“ Was, wenn Anni Albers, „die sich erst im letzten Drittel ihres Lebens dem Drucken zuwandte, früher zum Papier gefunden hätte?“, spekuliert Pilarzcyk.</p>
 </p>
         
