button color fixed, change konzept text

--- a/eileen-gray/index.html
+++ b/eileen-gray/index.html
@@ -62,7 +62,7 @@
         <a href="#img2"><img src="/assets/img/Eileen Gray/creative commons/Eileen-gray-e1027-table.png" alt="Bild 2"></a>
     </div>
     <div class="img-container">
-        <a href="#img3"><img src="/assets/img/CharlottePerriand/ refuge tonneau by pierre jeanneret and charlotte perriand, architectes, 1938.png" alt="Bild 3"></a>
+        <a href="#img3"><img src="/assets/img/Eileen Gray/creative commons/E.1027,_Roquebrune-Cap-Martin_(September_2016).jpg" alt="Bild 3"></a>
     </div>
 </div>
 <div id="img1" class="modal">
@@ -74,13 +74,13 @@
 <div id="img2" class="modal">
     <a href="#" class="button">X</a>     
     <img src="/assets/img/Eileen Gray/creative commons/Eileen-gray-e1027-table.jpg" alt="Bild 2">
-    <div class="grid-box-hl"><h6>E-1027</h6></div>
+    <div class="grid-box-hl"><h6>E.1027</h6></div>
     <div class="grid-box-p"><h4><u> Eileen Gray Le Corbusier, Pierre Jeanneret, 1930</u> <br>chrome plated tubular steel and leather cushions <br><br>Der Stuhl war als Arbeits- oder Konferenzstuhl gedacht, weshalb er sich um die eigene Achse drehen lässt (Swivel-Funktion). In den 1920er Jahren war diese Art der Mechanik für Wohnmöbel ungewöhnlich und eher im Büro- oder Industriemöbeldesign zu finden. </h4></div>
 </div>
 <div id="img3" class="modal">
     <a href="#" class="button">X</a>      
-    <img src="/assets/img/CharlottePerriand/ refuge tonneau by pierre jeanneret and charlotte perriand, architectes, 1938.png" alt="Bild 3">
-    <div class="grid-box-hl"><h6>Refuge Tonneau</h6></div>
+    <img src="/assets/img/Eileen Gray/creative commons/E.1027,_Roquebrune-Cap-Martin_(September_2016).jpg" alt="Bild 3">
+    <div class="grid-box-hl"><h6>E.1027</h6></div>
     <div class="grid-box-p"><h4><u>Charlotte Perriand, Pierre Jeanneretein, Entwurf 1938 </u><br> Alpines Biwak realisiert in 2010 vom italienischen Label Cassina. <br><br>
     Cassina erwarb die Rechte an Perriands Nachlass, wodurch es ihnen erlaubt war getreu den Notizen und Skizzen zu bauen. 
         Gedacht für den Einsatz im gesamten Alpenraum und das Leben unter extremen Bedingungen, finden sich hier 8 Plätz zum Schlafen, Sitzen und Leben. Die Besonderheit: In aller Reduziertheit sind alle nötigen Einrichtungsgegenständige sind vorhanden – Perriand sah stets eine besondere Herausforderung darin, begrenzten Wohnraum funktionell einzurichten.</h4>
