neue Anordnung Bilder Unterseite

--- a/charlotte-perriand/index.html
+++ b/charlotte-perriand/index.html
@@ -56,26 +56,24 @@
         </div>
         
         <div class="bookright">
-        <p><div class="grid-container">
-    <div class="img-container">
+        <p>   <div class="img-container">
         <a href="#img1"><img src="/assets/img/CharlottePerriand/1024px-Créations_de_Charlotte_Perriand_et_d&apos;Isamu_Noguchi_(Musée_des_arts_décoratifs,_Paris)_(46043032122).jpg" alt="Bild 1"></a>
     </div>
-    <div class="img-container">
+    <div class="img-container1">
         <a href="#img2"><img src="/assets/img/CharlottePerriand/Swivel armchair_free.png" alt="Bild 2"></a>
     </div>
-    <div class="img-container">
+    <div class="img-container2">
         <a href="#img3"><img src="/assets/img/CharlottePerriand/ refuge tonneau by pierre jeanneret and charlotte perriand, architectes, 1938.png" alt="Bild 3"></a>
     </div>
-    <div class="img-container">
+    <div class="img-container3">
         <a href="#img4"><img src="/assets/img/CharlottePerriand/Charlotte auf LC4, Archiv Charlotte Perriand:Elisabeth Sandmann.webp" alt="Bild 4"></a>
     </div>
-    <div class="img-container">
+    <div class="img-container4">
         <a href="#img5"><img src="/assets/img/CharlottePerriand/Laure Adler Charlotte Perriand. Ihr Leben als moderne und unabhängige Frau.webp" alt="Bild 5"></a>
     </div>
-    <div class="img-container">
+    <div class="img-container5">
         <a href="#img6"><img src="/assets/img/CharlottePerriand/1024px-Meubles_Charlotte_Perriand.jpg" alt="Bild 6"></a>
     </div>
-</div>
 <div id="img1" class="modal">
     <a href="#" class="button">X</a>   
     <img src="/assets/img/CharlottePerriand/1024px-Créations_de_Charlotte_Perriand_et_d&apos;Isamu_Noguchi_(Musée_des_arts_décoratifs,_Paris)_(46043032122).jpg" alt="Bild 1">
@@ -121,6 +119,19 @@
     <img src="/assets/img/CharlottePerriand/1024px-Meubles_Charlotte_Perriand.jpg" alt="Bild 6">
     <h6></h6>
 </div>
+<div class="underconstructionbox-dropdown">
+        <div class="underconstructiontypo">under construction</div>
+        <div class="underconstructionbox-dropdown-content">
+        <h3>under construction</h3>
+        <p>Dieses Projekt wird noch bearbeitet!
+         Das Projekt soll auf „Female Design Positions“ in einem weiterhin männlich dominierten gestalterischem Raum aufmerksam machen. Entstanden ist ein spielerisches digitales Tool, das als Archiv oder zur Recherche genutzt werden kann. Nebst einer kleinen kuratierten Reihe von Positionen sind Benutzer:innen eingeladen, eigene Einträge einzureichen. Ob aus der Bauhausströmung, der Fluxus-Bewegung oder zeitgenössischer Gestaltung – Idee und Ziel ist es das Portal dauerhaft gemeinsam wachsen zu lassen. Reicht gerne eine Position ein, die ihr spannend findet!
+        <a href="mailto:evelyn.marbach@haw-hamburg.de?subject=Einsendung%3A%20Fill%20the%20Gap&body=Hello!%20%3C3%0A%0ASch%C3%B6n%2C%20dass%20Du%20eine%20female%20design%20position%20einreichen%20willst!%20Gemeinsam%20k%C3%B6nnen%20wir%20einen%20Beitrag%20f%C3%BCr%20mehr%20Sichtbarkeit%20leisten!%20%0A%20%0AF%C3%BCr%20das%20Einbinden%20Deiner%20Person%20in%20die%20Seitenstruktur%20ben%C3%B6tige%20ich%20folgende%20Angaben%20zur%20Person%3A%0A%0AfirstName%3A%20%0AlastName%3A%20%0Ayears%3A%20(hier%20die%20Lebzeiten)%0Aimage%3A%20(Bitte%20nur%20Bilder%20einreichen%20mit%20creative%20common%20license%20oder%20bereits%20f%C3%BCr%20den%20Nutzungskontext%20angefragte%20Bilder)%20%0Acredit%3A%20(Credit%20der%20Bilder)%0Adescription%3A%20!%20(Zeichenunbegrenzte%20Beschreibung%20zur%20Person%2C%20gerne%20mit%20Quellenangabe)%0Adiscipline%3A%20(hier%20die%20kreativen%20Schwerpunkte%20nennen.%20Gerne%20auch%20mehrere)%0A%0AIch%20freue%20mich%20auf%20Deine%20Nachricht!%0A%0ASonnige%20Gr%C3%BC%C3%9Fe%2C%0A%CC%B2%CC%B2e%CC%B2%CC%B2v%CC%B2%CC%B2i%CC%B2%CC%B2">
+        <div class="button">E-Mail senden</div></a></p>
+        </div>
+        <svg id="Ebene_1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 862 453">
+    <defs><style>.cls-1{fill:none;stroke:var(--color-2);;stroke-miterlimit:10;stroke-width:8px;}</style></defs>
+                <path class="cls-1" d="M588.78,93.67c-130.74-28.64-267.11-31.31-398.87-7.82-33.96,6.05-68.51,14.2-97.04,33.59-28.53,19.39-50.12,52.3-47.18,86.67,3.63,42.35,41.25,73.11,78.01,94.45,94.21,54.71,203.45,82.1,312.4,82.69,108.94.59,217.47-25.23,316.41-70.83,16.31-7.52,32.63-15.74,45.81-27.94,13.19-12.2,23.05-29.01,23.25-46.97.3-27.34-21.03-50.01-43.41-65.72-61.46-43.16-138.55-57.11-213.38-63.5-76.1-6.49-152.77-6.29-228.83.59-49.93,4.52-101.25,12.49-143.78,39.03"/>
+                </svg>  
 </p>
         
         </div>
