--- a/eileen-gray/index.html
+++ b/eileen-gray/index.html
@@ -81,13 +81,7 @@
     <a href="#" class="button">X</a>      
     <img src="/assets/img/Eileen Gray/creative commons/E.1027,_Roquebrune-Cap-Martin_(September_2016).jpg" alt="Bild 3">
     <div class="grid-box-hl"><h6>E.1027</h6></div>
-    <div class="grid-box-p"><h4><u>Charlotte Perriand, Pierre Jeanneretein, Entwurf 1938 </u><br> Alpines Biwak realisiert in 2010 vom italienischen Label Cassina. <br><br>
-    Cassina erwarb die Rechte an Perriands Nachlass, wodurch es ihnen erlaubt war getreu den Notizen und Skizzen zu bauen. 
-        Gedacht für den Einsatz im gesamten Alpenraum und das Leben unter extremen Bedingungen, finden sich hier 8 Plätz zum Schlafen, Sitzen und Leben. Die Besonderheit: In aller Reduziertheit sind alle nötigen Einrichtungsgegenständige sind vorhanden – Perriand sah stets eine besondere Herausforderung darin, begrenzten Wohnraum funktionell einzurichten.</h4>
-    <iframe src="https://www.youtube.com/embed/5OTKaHyRCUE" 
-            style="position: absolute; bottom: 10%; right: 4%; width: 30vw; height: 30vh;" 
-            frameborder="0" allowfullscreen>
-    </iframe>
+    <div class="grid-box-p"><h4><u>Charlotte Perriand, Pierre Jeanneretein, Entwurf 1938 </u><br> Der Name ist ein Code-Kürzel aus E für Eileen, 10 für Jean (der zehnte Buchstabe des Alphabets), 2 für Badovici und 7 für Gray. Mit einem L-förmigen Grundriss, einem Flachdach und raumhohen Fenstern ausgestattet, entstand ein sowohl rational in sich geschlossener als auch ein sich der Umgebung öffnender beispielhafter Bau der internationalen Moderne.</h4>
     </div>
 </div>
 </div>
