anpassungen 2 Bilder unterseite

--- a/anni-albers/index.html
+++ b/anni-albers/index.html
@@ -58,16 +58,16 @@
         <div class="img-container">
         <a href="#img1"><img src="/assets/img/Anni Albers/creative commons/The_Anni_Albers_show_at_Tate_Modern_is_astonishing.jpg" alt="Bild 1"></a>
         </div>
-        <div class="img-container">
+        <div class="img-container1">
         <a href="#img2"><img src="/assets/img/Anni Albers/creative commons/Anni_Albers,_Tapestry,_1948._Handwoven_linen_and.jpg" alt="Bild 2"></a>
         </div>
-        <div class="img-container">
+        <div class="img-container2">
         <a href="#img3"><img src="/assets/img/Anni Albers/creative commons/Anni_Albers_(1899–1994),_Design_for_a_Silk_Tapestry,_1926.jpg" alt="Bild 2"></a>
         </div>
-        <div class="img-container">
+        <div class="img-container3">
         <a href="#img4"><img src="/assets/img/Anni Albers/creative commons/Anni_Albers_(1899–1994),_Design_for_a_Rug,_1927.jpg" alt="Bild 2"></a>
         </div>
-        <div class="img-container">
+        <div class="img-container4">
         <a href="#img5"><img src="/assets/img/Anni Albers/creative commons/Anni_Albers_(1899–1994),_Design_for_a_Jacquard_Weaving,_1926.jpg" alt="Bild 2"></a>
         </div>
 <div id="img1" class="modal">
