--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                 <div class="post-box box-15">
                     <div class="hidden-child">      
                                 <div class="img">
-                                    <img src="/assets/img/MargareteSchütte-Lihotzky/Creative Commons/Margarete_Schütte-Lihotzky_1997.jpg" alt="" class="hidden-image">                                   
+                                    <img src="/assets/img/Margarete Schütte-Lihotzky/Creative Commons/Margarete_Schütte-Lihotzky_1997.jpg" alt="" class="hidden-image">                                   
                                                         
                             <h5>Margarete <br> Schütte-Lihotzky</h5>      
                             
