--- a/margarete-schütte-lihotzky/index.html
+++ b/margarete-schütte-lihotzky/index.html
@@ -54,7 +54,7 @@
 
         </div>
         <div class="img" style="position: absolute; top: 80px; right: 46%">
-          <img src="/assets/img/MargareteSchütte-Lihotzky/Creative Commons/Margarete_Schütte-Lihotzky_1997.jpg" width="200px" alt="Beispielbild" class="hidden-image"></div>
+          <img src="/assets/img/Margarete Schütte-Lihotzky/Creative Commons/Margarete_Schütte-Lihotzky_1997.jpg" width="200px" alt="Beispielbild" class="hidden-image"></div>
         <div class="imgcredit"><div class="hidden-child">credit: Public domain,
         <br>via Wikimedia Commons</div>
         </div>
