--- a/margarete-schütte-lihotzky/index.html
+++ b/margarete-schütte-lihotzky/index.html
@@ -64,13 +64,13 @@
         
         <div class="bookright">
         <p>   <div class="img-container">
-        <a href="#img1"><img src="/assets/img/MargareteSchütte-Lihotzky/Creative Commons/Frankfurterkueche_1926.jpg" alt="Bild 1"></a>
+        <a href="#img1"><img src="/assets/img/Margarete Schütte-Lihotzky/Creative Commons/Frankfurterkueche_1926.jpg" alt="Bild 1"></a>
     </div>
     <div class="img-container1">
-        <a href="#img2"><img src="/assets/img/MargareteSchütte-Lihotzky/Creative Commons/Frankfurter-kueche-vienna.JPG" alt="Bild 2"></a>
+        <a href="#img2"><img src="/assets/img/Margarete Schütte-Lihotzky/Creative Commons/Frankfurter-kueche-vienna.JPG" alt="Bild 2"></a>
     </div>
     <div class="img-container2">
-        <a href="#img3"><img src="/assets/img/MargareteSchütte-Lihotzky/Creative Commons/Salini,_Lino-Schütte-Lihotzky,_Margarete-1927.jpg" alt="Bild 3"></a>
+        <a href="#img3"><img src="/assets/img/Margarete Schütte-Lihotzky/Creative Commons/Salini,_Lino-Schütte-Lihotzky,_Margarete-1927.jpg" alt="Bild 3"></a>
     </div>
     <!--<div class="img-container3">
         <a href="#img4"><img src="/assets/img/CharlottePerriand/Charlotte auf LC4, Archiv Charlotte Perriand:Elisabeth Sandmann.webp" alt="Bild 4"></a>
@@ -89,14 +89,14 @@
 </div>
 <div id="img2" class="modal">
     <a href="#" class="button">X</a>     
-    <img src="/assets/img/MargareteSchütte-Lihotzky/Creative Commons/Frankfurter-kueche-vienna.JPG" alt="Bild 2">
+    <img src="/assets/img/Margarete Schütte-Lihotzky/Creative Commons/Frankfurter-kueche-vienna.JPG" alt="Bild 2">
     <!--<div class="grid-box-hl"><h6>Swivel Armchair B302</h6></div>
     <div class="grid-box-p"><h4><u> Charlotte Perriand, Le Corbusier, Pierre Jeanneret, 1930</u> <br>verchromtes Stahlrohr und Lederkissen<br><br>Der Stuhl war als Arbeits- oder Konferenzstuhl gedacht, weshalb er sich um die eigene Achse drehen lässt (Swivel-Funktion). In den 1920er Jahren war diese Art der Mechanik für Wohnmöbel ungewöhnlich und eher im Büro- oder Industriemöbeldesign zu finden. <br><br>
     <u>... „Der Katalog beinhaltet auch einen Armdrehstuhl von einer gewissen "Charlotte Perriand, Paris", der einem durchaus bekannt vorkommen dürfte. Bei dem Objekt handelt es sich wahrscheinlich um den Original B 302, den Perriand 1927 entworfen hat und der dann später nach kleinen Veränderungen durch Pierre Jeanneret und Le Corbusier - und einem bisschen Fein-Tuning durch alle drei - 1929 als das Objekt wieder auf den Markt gebracht wurde, das zum modernen LC7 Drehstuhl von Cassina werden sollte - ein Stuhl, der allen dreien angerechnet werden kann, aber meist Le Corbusier zugeschrieben wird. Dadurch gewährt ein harmloser Katalogeintrag einen sehr interessanten Einblick in die Geschichte des Möbeldesigns und vor allem in die Geschichte eines Produktes, das wir alle zu kennen glauben.“... – smow.de/blog/</u> </h4></div>-->
 </div>
 <div id="img3" class="modal">
     <a href="#" class="button">X</a>      
-    <img src="/assets/img/MargareteSchütte-Lihotzky/Creative Commons/Salini,_Lino-Schütte-Lihotzky,_Margarete-1927.jpg" alt="Bild 3">
+    <img src="/assets/img/Margarete Schütte-Lihotzky/Creative Commons/Salini,_Lino-Schütte-Lihotzky,_Margarete-1927.jpg" alt="Bild 3">
     <!--<div class="grid-box-hl"><h6>Refuge Tonneau</h6></div>
     <div class="grid-box-p"><h4><u>Charlotte Perriand, Pierre Jeanneretein, Entwurf 1938 </u><br> Alpines Biwak realisiert in 2010 vom italienischen Label Cassina. <br><br>
     Cassina erwarb die Rechte an Perriands Nachlass, wodurch es ihnen erlaubt war getreu den Notizen und Skizzen zu bauen. In enger Zusammenarbeit mit Pernette Perriand-Barsac und Jacques Barsac wurde Perriands Vision nachgebaut. 
@@ -106,7 +106,7 @@
             frameborder="0" allowfullscreen>
     </iframe>
     </div>
-</div>-->
+</div>
 </div>
 <div id="img4" class="modal">
     <a href="#" class="button">X</a>   
@@ -117,7 +117,7 @@
 <div id="img5" class="modal">
     <a href="#" class="button">X</a>   
     <img src="/assets/img/CharlottePerriand/Laure Adler Charlotte Perriand. Ihr Leben als moderne und unabhängige Frau.webp" alt="Bild 5">
-    <!--<div class="grid-box-hl"><h6>Biografie: Charlotte Perriand</h6></div>-->
+    <div class="grid-box-hl"><h6>Biografie: Charlotte Perriand</h6></div>
     <div class="grid-box-p"><h4>Biografie: Charlotte Perriand <br> geschrieben von Laure Adler, 2020</h4></div>
     <div class="grid-box-p"><iframe src="https://archive.org/embed/Das-andere-Bauhaus_Die-Designerin-Charlotte-Perriand_ARTE-France_2019" style="position: absolute; bottom: 10%; right: 4%; width: 30vw; height: 30vh;" 
     frameborder="0" allowfullscreen></iframe>
@@ -128,7 +128,7 @@
     <img src="/assets/img/CharlottePerriand/Creative Commons/1024px-Meubles_Charlotte_Perriand.jpg" alt="Bild 6">
     <div class="grid-box-p"><h4><u>Ausstellung „Charlotte Perriand und Japan“ im Museum für moderne und zeitgenössische Kunst in Saint-Étienne Métropole, 2013</u></h6>
 </div>
-</div>
+</div>-->
 <div class="underconstructionbox-dropdown">
         <div class="underconstructiontypo">under construction</div>
         <div class="underconstructionbox-dropdown-content">
