--- a/margarete-schütte-lihotzky/index.html
+++ b/margarete-schütte-lihotzky/index.html
@@ -54,7 +54,7 @@
 
         </div>
         <div class="img" style="position: absolute; top: 80px; right: 46%">
-          <img src="/assets/img/Margarete Schütte-Lihotzky/Creative Commons/Margarete_Schütte-Lihotzky_1997.jpg" width="200px" alt="Beispielbild" class="hidden-image"></div>
+          <img src="/assets/img/Margarete Schütte-Lihotzky/Margarete_Schütte-Lihotzky_1997.jpg" width="200px" alt="Beispielbild" class="hidden-image"></div>
         <div class="imgcredit"><div class="hidden-child">credit: Public domain,
         <br>via Wikimedia Commons</div>
         </div>
@@ -64,13 +64,13 @@
         
         <div class="bookright">
         <p>   <div class="img-container">
-        <a href="#img1"><img src="/assets/img/Margarete Schütte-Lihotzky/Creative Commons/Frankfurterkueche_1926.jpg" alt="Bild 1"></a>
+        <a href="#img1"><img src="/assets/img/Margarete Schütte-Lihotzky/Frankfurterkueche_1926.jpg" alt="Bild 1"></a>
     </div>
     <div class="img-container1">
-        <a href="#img2"><img src="/assets/img/Margarete Schütte-Lihotzky/Creative Commons/Frankfurter-kueche-vienna.JPG" alt="Bild 2"></a>
+        <a href="#img2"><img src="/assets/img/Margarete Schütte-Lihotzky/Frankfurter-kueche-vienna.JPG" alt="Bild 2"></a>
     </div>
     <div class="img-container2">
-        <a href="#img3"><img src="/assets/img/Margarete Schütte-Lihotzky/Creative Commons/Salini,_Lino-Schütte-Lihotzky,_Margarete-1927.jpg" alt="Bild 3"></a>
+        <a href="#img3"><img src="/assets/img/Margarete Schütte-Lihotzky/Salini,_Lino-Schütte-Lihotzky,_Margarete-1927.jpg" alt="Bild 3"></a>
     </div>
     <!--<div class="img-container3">
         <a href="#img4"><img src="/assets/img/CharlottePerriand/Charlotte auf LC4, Archiv Charlotte Perriand:Elisabeth Sandmann.webp" alt="Bild 4"></a>
@@ -79,24 +79,24 @@
         <a href="#img5"><img src="/assets/img/CharlottePerriand/Laure Adler Charlotte Perriand. Ihr Leben als moderne und unabhängige Frau.webp" alt="Bild 5"></a>
     </div>
     <div class="img-container5">
-        <a href="#img6"><img src="/assets/img/CharlottePerriand/Creative Commons/1024px-Meubles_Charlotte_Perriand.jpg" alt="Bild 6"></a>
+        <a href="#img6"><img src="/assets/img/CharlottePerriand/1024px-Meubles_Charlotte_Perriand.jpg" alt="Bild 6"></a>
     </div>-->
 <div id="img1" class="modal">
     <a href="#" class="button">X</a>   
-    <img src="/assets/img/MargareteSchütte-Lihotzky/Creative Commons/Frankfurterkueche_1926.jpg" alt="Bild 1">
+    <img src="/assets/img/MargareteSchütte-Lihotzky/Frankfurterkueche_1926.jpg" alt="Bild 1">
     <div class="grid-box-hl"><h6></h6></div>
     <div class="grid-box-p"><h4><u> Margarete Schütte-Lihotzky,Frankfurter Kücke, 1926</u> <br> Die Frankfurter Küche gilt als wegweisendes Modell der modernen Einbauküche. Sie war die erste industriell gefertigte Einbauküche und entstand als Teil des sozialen Wohnungsbaus in Frankfurt. Ihre Besonderheit liegt in der funktionalen Gestaltung: kompakte Maße, optimierte Arbeitswege und clevere Stauraumlösungen. Schütte-Lihotzky nutzte ergonomische Erkenntnisse und orientierte sich an den Arbeitsabläufen, um Effizienz und Komfort zu maximieren. Die Küche setzte neue Maßstäbe im Design und ist bis heute ein Vorbild für moderne Küchengestaltung.</h4></div>
 </div>
 <div id="img2" class="modal">
     <a href="#" class="button">X</a>     
-    <img src="/assets/img/Margarete Schütte-Lihotzky/Creative Commons/Frankfurter-kueche-vienna.JPG" alt="Bild 2">
+    <img src="/assets/img/Margarete Schütte-Lihotzky/Frankfurter-kueche-vienna.JPG" alt="Bild 2">
     <!--<div class="grid-box-hl"><h6>Swivel Armchair B302</h6></div>
     <div class="grid-box-p"><h4><u> Charlotte Perriand, Le Corbusier, Pierre Jeanneret, 1930</u> <br>verchromtes Stahlrohr und Lederkissen<br><br>Der Stuhl war als Arbeits- oder Konferenzstuhl gedacht, weshalb er sich um die eigene Achse drehen lässt (Swivel-Funktion). In den 1920er Jahren war diese Art der Mechanik für Wohnmöbel ungewöhnlich und eher im Büro- oder Industriemöbeldesign zu finden. <br><br>
     <u>... „Der Katalog beinhaltet auch einen Armdrehstuhl von einer gewissen "Charlotte Perriand, Paris", der einem durchaus bekannt vorkommen dürfte. Bei dem Objekt handelt es sich wahrscheinlich um den Original B 302, den Perriand 1927 entworfen hat und der dann später nach kleinen Veränderungen durch Pierre Jeanneret und Le Corbusier - und einem bisschen Fein-Tuning durch alle drei - 1929 als das Objekt wieder auf den Markt gebracht wurde, das zum modernen LC7 Drehstuhl von Cassina werden sollte - ein Stuhl, der allen dreien angerechnet werden kann, aber meist Le Corbusier zugeschrieben wird. Dadurch gewährt ein harmloser Katalogeintrag einen sehr interessanten Einblick in die Geschichte des Möbeldesigns und vor allem in die Geschichte eines Produktes, das wir alle zu kennen glauben.“... – smow.de/blog/</u> </h4></div>-->
 </div>
 <div id="img3" class="modal">
     <a href="#" class="button">X</a>      
-    <img src="/assets/img/Margarete Schütte-Lihotzky/Creative Commons/Salini,_Lino-Schütte-Lihotzky,_Margarete-1927.jpg" alt="Bild 3">
+    <img src="/assets/img/Margarete Schütte-Lihotzky/Salini,_Lino-Schütte-Lihotzky,_Margarete-1927.jpg" alt="Bild 3">
     <!--<div class="grid-box-hl"><h6>Refuge Tonneau</h6></div>
     <div class="grid-box-p"><h4><u>Charlotte Perriand, Pierre Jeanneretein, Entwurf 1938 </u><br> Alpines Biwak realisiert in 2010 vom italienischen Label Cassina. <br><br>
     Cassina erwarb die Rechte an Perriands Nachlass, wodurch es ihnen erlaubt war getreu den Notizen und Skizzen zu bauen. In enger Zusammenarbeit mit Pernette Perriand-Barsac und Jacques Barsac wurde Perriands Vision nachgebaut. 
@@ -125,7 +125,7 @@
 </div>
 <div id="img6" class="modal">
     <a href="#" class="button">X</a>   
-    <img src="/assets/img/CharlottePerriand/Creative Commons/1024px-Meubles_Charlotte_Perriand.jpg" alt="Bild 6">
+    <img src="/assets/img/CharlottePerriand/1024px-Meubles_Charlotte_Perriand.jpg" alt="Bild 6">
     <div class="grid-box-p"><h4><u>Ausstellung „Charlotte Perriand und Japan“ im Museum für moderne und zeitgenössische Kunst in Saint-Étienne Métropole, 2013</u></h6>
 </div>
 </div>-->
